cursive-bootstrap/tests/ui/E-TYP/E-TYP-2060.cursive
// RUN: compile-fail
// DIAG: E-TYP-2060
// SPEC: 8.15
// DESC: Non-exhaustive match on general modal type

modal Resource {
    state Empty {}
    state Ready { value: i32 }
    state Error { code: i32 }
}

procedure incomplete_match(r: Resource) -> i32 {
    return match r {  //~ ERROR E-TYP-2060: non-exhaustive match on modal
        s: Resource@Empty => { 0 }
        s: Resource@Ready => { s.value }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
